# hw-01-applied-python

./: README.md  aggregate_and_save_agreement_summary.py  alembic.ini  app.py  load_data_from_csv_to_db.py  models.py  pyproject.toml  schemas.py  services.py  streamlit_app.py
alembic/: env.py
alembic/versions/: 2a48f02441bb_initial_migration.py  77766034c35e_add_agreement_summary_table.py  7f0ce4499f11_initial_migration.py
data/: df.pkl
