[tool.poetry]
name = "hw-01-applied-python"
version = "0.1.0"
description = "Homework number 1 for the course \"Applied Python\" for the master's program \"Machine Learning and High-Load Systems\" HSE."
authors = ["Anton Zaitsev <antonzaitsev474@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
plotly = "^5.18.0"
pillow = "^10.1.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
